# opportunity-radar

./: LICENSE  README.md
backend/: pyproject.toml
backend/src/ingestion/: scrapy.cfg
backend/src/ingestion/opportunity_radar/: items.py  middlewares.py  pipelines.py  settings.py
backend/src/ingestion/opportunity_radar/spiders/: quotes_spider.py
docs/: 00-project-structure.md  01-Phase1-Tasks.md
