[project]
name = "backend"
version = "0.1.0"
description = "Opportunity Radar monitors technology news, startup activity, product launches, and market signals to detect emerging business opportunities. This system combines AI agents, data pipelines, semantic search, and dashboards to produce actionable insights for businesses and technology strategists."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "scrapy>=2.16.0",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
